--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 SAiDoku.xcodeproj/project.xcworkspace/xcuserdata/home.xcuserdatad/UserInterfaceState.xcuserstate
 SAiDoku.xcodeproj/xcuserdata/home.xcuserdatad/xcschemes/xcschememanagement.plist
+SAiDoku.xcodeproj/xcuserdata/home.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
